--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mon-app",
+  "homepage": "http://bemusician.fr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,17 +8,32 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^2.2.0",
+    "axios": "^1.1.3",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-idle-timer": "^5.4.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^9.1.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "vite": "^3.2.4",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +58,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
