--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-idle-timer": "^5.4.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
