--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.7.1",
     "react-idle-timer": "^5.4.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
